# qiron

./: CMakeLists.txt  LICENSE.rtf  README.md  qiron.pro
cmake/: project_cxx_header.cmake
qironplugin/: qirbreadcrumbbarplugin.cpp  qirbreadcrumbbarplugin.h  qirexpanderplugin.cpp  qirexpanderplugin.h  qironplugin.cpp  qironplugin.h  qironplugin.pri  qironplugin.pro  qironplugin.qrc  qironwidgetplugin.cpp  qironwidgetplugin.h  qirquadsplitterplugin.cpp  qirquadsplitterplugin.h
src/: CMakeLists.txt  src.pro
src/Common/: Common.pri  qirboolblocker.cpp  qirboolblocker.h  qirdesignpatterns.h  qirglobal.h  qirmacros.h  qirobject.cpp  qirobject.h  qiron_export.h  qirsmartpointer.h  qirsubstyle.cpp  qirsubstyle.h  qirwidget.cpp  qirwidget.h  qirwindows.h
src/Common/private/: qirobject_p.h
src/Common/ui/: qirwidget_ui.h
src/QIrBreadCrumbBar/: QIrBreadCrumbBar.pri  qirabstractbreadcrumbmodel.h  qirabstractbreadscrumbmodel.cpp  qirbreadcrumbbar.cpp  qirbreadcrumbbar.h  qirbreadcrumbbarstyle.cpp  qirbreadcrumbbarstyle.h  qirbreadcrumbdirmodel.cpp  qirbreadcrumbdirmodel.h  qirdir_helper.cpp  qirdir_helper.h  qirstyleoptionbreadcrumbbar.cpp  qirstyleoptionbreadcrumbbar.h
src/QIrBreadCrumbBar/private/: qirbreadcrumbbarstyle_p.h
src/QIrDock/: QIrDock.pri  qirabstractdock.cpp  qirabstractdock.h  qirabstractdockstyle.cpp  qirabstractdockstyle.h  qirdock.cpp  qirdock.h  qirdockdragguide.cpp  qirdockdragguide.h  qirdockeffectmanager.cpp  qirdockeffectmanager.h  qirdocklet.cpp  qirdocklet.h  qirdockletbundle.cpp  qirdockletbundle.h  qirdockmanager.cpp  qirdockmanager.h  qirdockstyle.cpp  qirdockstyle.h  qirdocktiplabel.cpp  qirdocktiplabel.h  qirdockview.cpp  qirdockview.h  qirdropshadow.cpp  qirdropshadow.h  qirgraphicsmirroreffect.cpp  qirgraphicsmirroreffect.h  qirparaboliceffectmanager.cpp  qirparaboliceffectmanager.h  qirstyleoptiondock.cpp  qirstyleoptiondock.h
src/QIrExpander/: QIrExpander.pri  qirexpander.cpp  qirexpander.h  qirexpanderbox.cpp  qirexpanderbox.h  qirexpanderstyle.cpp  qirexpanderstyle.h
src/QIrQuadSplitter/: QIrQuadSplitter.pri  qirquadsplitter.cpp  qirquadsplitter.h  qirquadsplitterlayout.cpp  qirquadsplitterlayout.h
(+14 files in other folders)
